# vlc-plugin-gles2

./: .gitignore  AUTHORS  NEWS  README  configure.ac
src/: Makefile.am  gles2.c
